PyMaker/datas/object2/RawHTML/i1901/Python_DOC_referPages.indentation-error-with-python-indented-block.txt
<div class="post-text" itemprop="text">
<pre><code>&gt;&gt;&gt; for link in soup.find_all('a'):
... print link
  File "&lt;stdin&gt;", line 2
    print link
        ^
IndentationError: expected an indented block
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The correct indentation should be:</p>
<pre><code>for link in soup.find_all('a'):
    print(link)
</code></pre>
<p>Try this snippet to understand the need for indentation</p>
<pre><code>for x in range(3):
    print("Inside the loop", x)

print("Outside the loop, this print is run only once")
</code></pre>
<p>This notion is well explained in the <a href="https://docs.python.org/3/tutorial/introduction.html#first-steps-towards-programming" rel="nofollow noreferrer">beginning of Python tutorial</a>:</p>
<blockquote>
<p>The <em>body</em> of the loop is <em>indented</em>: indentation is Python’s way of grouping statements. At the interactive prompt, you have to type a tab or space(s) for each indented line. In practice you will prepare more complicated input for Python with a text editor; all decent text editors have an auto-indent facility. When a compound statement is entered interactively, it must be followed by a blank line to indicate completion (since the parser cannot guess when you have typed the last line). Note that each line within a basic block must be indented by the same amount.</p>
</blockquote>
</div>
<span class="comment-copy">Please read <a href="https://stackoverflow.com/help/how-to-ask">how to ask a good question</a> to better understand the downvotes and learn to improve your question ;)</span>
<span class="comment-copy">May I know why is there "IndentationError: expected an indented block"?</span>
<span class="comment-copy">Because you did not indent your print. Python uses indentation to determine which instructions are in your loop and which are outside</span>
<span class="comment-copy">Sorry Antwane, I don't get what you mean. Do you have any links or examples for me to understand it better?</span>
<span class="comment-copy">I've edited my answer to link to the correct text in python docs</span>
<span class="comment-copy">I get it now, but when I retry it shows "SyntaxError: Missing parentheses in call to 'print'. Did you mean print(link)?"</span>
